ckanext/cioos_theme/public/cioos_theme.scss
/* ... */
.media-item {
  position: relative;
  float: left;
  width: 150px;
  padding: 15px;
  margin: 0 0 10px 10px;
  background-color: white;
  border-radius: 3px;
}

.media-grid {
  background: none;
  background-color: #f8f8f8;
  border: 1px solid #52a7d7;
}

[role=main],
.main {
  padding-top: 10px;
  background: none;
  background-color: #ffffff;
}

.box {
  background-color: #f8f8f8;
  box-shadow: none;
}

/* =====================================================
   The "account masthead" bar across the top of the site
   ===================================================== */

.account-masthead {
  background-color: #3c7394;
  color: white;
}

/* The "bubble" containing the number of new notifications. */
.account-masthead .account .notifications a span {
  background-color: #3c7394;
}

/* The text and icons in the user account info. */
.account-masthead .account ul li a {
  color: rgba(0, 0, 0, 0.6);
}

/* The user account info text and icons, when the user's pointer is hovering
   over them. */
.account-masthead .account ul li a:hover {
  color: rgba(0, 0, 0, 0.7);
  background-color: #3c7394;
}


/* ========================================================================
   The main masthead bar that contains the site logo, nav links, and search
   ======================================================================== */
.masthead {
  background-color: #52a7d7;
  color: #284162;
}

/* The "navigation pills" in the masthead (the links to Datasets,
   Organizations, etc) when the user's pointer hovers over them. */
.masthead .navigation .nav-pills li a:hover {
  background-color: #3e628f;
  color: #3c7394;
}

/* The "active" navigation pill (for example, when you're on the /dataset page
   the "Datasets" link is active). */
.masthead .navigation .nav-pills li.active a {
  background-color: #22364f;
  color: white;
}

.masthead .navigation .nav-pills li a {
  background-color: #52a7d7;
  color: white;
}


/* ===========================================
   The content in the middle of the front page
   =========================================== */

/* Change the colors of the "Search Your Data" box. */
/* .homepage .module-search .module-content {
  color: rgb(68, 68, 68);
  background-color: #f8f8f8;
} */

/* Change the colors of the "Search Your Data" box. */
/* .homepage .module-search .module-content {
  color: rgb(68, 68, 68);
  background-color: #f8f8f8;
} */

/* Change the background color of the "Popular Tags" box. */
/* .homepage .module-search .tags {
  background-color: #52a7d7;
} */

/* ====================================
   The footer at the bottom of the site
   ==================================== */
.site-footer {
  background-color: #3c7394;
}

body {
  background: #ffffff;
}

/* The text in the footer. */
.site-footer,
.site-footer label,
.site-footer small {
  color: rgba(0, 0, 0, 0.6);
}

/* The link texts in the footer. */
.site-footer a {
  color: rgba(0, 0, 0, 0.6);
}

#topmenu {
  background: #52A79B;
  color: #fff;
  overflow: hidden;
}

#topmenu nav {
  width: 50%;
  float: right;
  padding: 0 2em 0 0;
}

#topmenu li {
  float: right;
  display: block;
  margin: 5px 0px 5px 30px;
  padding: 0;

}


#topmenu a {
  color: #fff;
}

#mainmenu {
  border: 1px solid #52A79B;
  border-width: 0 0 1px 0;
}

#mainmenu img {
  padding: .75em 0 .25em 2em;
}

#mainmenu nav {
  width: 50%;
  float: right;
  padding: .75em 2em .25em 0;
}

#mainmenu ul {
  overflow: hidden;
  padding: 0;
  margin: 0;
  display: flex;
  justify-content: space-between;
}

#mainmenu li {
  float: right;
  display: block;
  margin: 3em 0 0 0;
  font-family: 'Quicksand', sans-serif;
  font-weight: bold;
  text-transform: uppercase;
}
.box,
.wrapper {
    background-color: #F8F8F8;
    border: 1px solid #52A79B;
    border-width: 0 0 0 4px;
    border-radius: 0;
    box-shadow: none;
    position: relative;
}

@media (min-width: 1000px) {
  .container {
    width: 900px;
  }
}
@media (min-width: 1192px) {
  .container {
    width: 1170px;
  }
}
@media (min-width: 1400px) {
  .container {
    width: 1390px;
  }
}

/* Main navigation
================================================== */

header nav,
.header nav,
.nav nav  {
  float: left;
  ul#menu-primary{ 
    list-style: none;
    margin: 0;
    padding: 0;
    li {
      display: table-cell;
      padding: 0;
      a{ 
        text-decoration: none;
      }
    }
  }
}

.skip-link{
  position: absolute; left:100000px}
.main-nav-check,
.mobile-nav ,
.toggle-menu {
  display: none;
}
/* ... */

